--- a/Teacher3/pages/index/index.wxml
+++ b/Teacher3/pages/index/index.wxml
@@ -73,28 +73,28 @@
                 <view class='choice-title m'>一种选择，一种别样的人生</view>
             </view>
             <view class='choice-content'>
-                <view class='choice-item'>
+                <view class='choice-item' bindtap='jump' data-url='../firstPage/firstPage'>
                     <image class='choice-img' src='http://img.my-shop.cc/teacher/tc3_yl1_img.jpg'></image>
                     <view class='choice-des'>
                         <image class='choice-icon' src='http://img.my-shop.cc/teacher/tc3_yl_icon1.png'></image>
                         <view class='choice-txt m red'>儿童综合医疗</view>
                     </view>
                 </view>
-                <view class='choice-item'>
+                <view class='choice-item' bindtap='jump' data-url='../secondPage/secondPage'>
                     <image class='choice-img' src='http://img.my-shop.cc/teacher/tc3_yl2_img.jpg'></image>
                     <view class='choice-des'>
                         <image class='choice-icon' src='http://img.my-shop.cc/teacher/tc3_yl_icon2.png'></image>
                         <view class='choice-txt m red'>平安e生保2017</view>
                     </view>
                 </view>
-                <view class='choice-item'>
+                <view class='choice-item' bindtap='jump' data-url='../thirdPage/thirdPage'>
                     <image class='choice-img' src='http://img.my-shop.cc/teacher/tc3_yl3_img.jpg'></image>
                     <view class='choice-des'>
                         <image class='choice-icon' src='http://img.my-shop.cc/teacher/tc3_yl_icon3.png'></image>
                         <view class='choice-txt m red'>福寿安康</view>
                     </view>
                 </view>
-                <view class='choice-item'>
+                <view class='choice-item' bindtap='jump' data-url='../forthPage/forthPage'>
                     <image class='choice-img' src='http://img.my-shop.cc/teacher/tc3_yl4_img.jpg'></image>
                     <view class='choice-des'>
                         <image class='choice-icon' src='http://img.my-shop.cc/teacher/tc3_yl_icon4.png'></image>
