--- a/Teacher3/pages/firstPage/firstPage.wxml
+++ b/Teacher3/pages/firstPage/firstPage.wxml
@@ -1,2 +1,3 @@
-<!--pages/firstPage/firstPage.wxml-->
-<text>pages/firstPage/firstPage.wxml</text>
+<view class="page-container">
+    <image class='page-img' src='{{item}}' mode="{{'widthFix'}}" wx:for="{{img_url}}"></image>
+</view>
