--- a/Teacher3/pages/forthPage/forthPage.wxml
+++ b/Teacher3/pages/forthPage/forthPage.wxml
@@ -1,2 +1,3 @@
-<!--pages/forthPage/forthPage.wxml-->
-<text>pages/forthPage/forthPage.wxml</text>
+<view class="page-container">
+    <image class='page-img' src='{{item}}' mode="{{'widthFix'}}" wx:for="{{img_url}}"></image>
+</view>
