--- a/Teacher3/pages/secondPage/secondPage.wxml
+++ b/Teacher3/pages/secondPage/secondPage.wxml
@@ -1,2 +1,3 @@
-<!--pages/secondPage/secondPage.wxml-->
-<text>pages/secondPage/secondPage.wxml</text>
+<view class="page-container">
+    <image class='page-img' src='{{item}}' mode="{{'widthFix'}}" wx:for="{{img_url}}"></image>
+</view>
