--- a/Teacher3/pages/index/index.wxss
+++ b/Teacher3/pages/index/index.wxss
@@ -125,7 +125,7 @@ button::after{
 
 .join-title-img{
     width: 180rpx;
-    height: 55rpx;
+    height: 50rpx;
 }
 
 .join-us{
@@ -201,7 +201,7 @@ button::after{
 
 .bg-md-img{
     width: 100%;
-    height: 410rpx;
+    height: 345rpx;
 }
 
 .choice-head{
@@ -277,7 +277,7 @@ button::after{
     margin: 0 auto;
     text-align: center;
     width: 622rpx;
-    padding: 20rpx 0;
+    padding: 20rpx 20rpx;
     border: 4rpx solid #604a6d;
 }
 
@@ -306,4 +306,8 @@ button::after{
     margin-bottom: 10rpx;
     width: 330rpx;
     height: 360rpx;
+}
+
+.zhaop{
+    text-align: left;
 }
