--- a/Tmenu/pages/menu/menu.wxss
+++ b/Tmenu/pages/menu/menu.wxss
@@ -744,3 +744,96 @@ swiper-item {
 .bc-gray {
     background: #d2d2d2;
 }
+
+.cate-type {
+    position: absolute;
+    top: 20rpx;
+    right: 0;
+    width: 24rpx;
+    height: 24rpx;
+    background: #f00;
+    color: #fff;
+    font-size: 20rpx;
+    line-height: 1;
+    text-align: center;
+}
+
+
+.spec-box{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 86%;
+    background: #fff;
+    border-radius: 10rpx;
+    z-index: 10006;
+}
+
+.title{
+    text-align: center;
+}
+
+.spec-head-box{
+    position: relative;
+}
+
+.close-box{
+    position: absolute;
+    right: 10rpx;
+    top: 10rpx;
+}
+
+.close-btn{
+    position: relative;
+    width: 30rpx;
+    height: 30rpx;
+    transform: rotate(45deg);
+}
+
+.close-btn::before{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    content: "";
+    display: block;
+    width: 2rpx;
+    height: 100%;
+    background: #000;
+}
+.close-btn::after{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2rpx;
+    background: #000;
+}
+
+.spec-type-item{
+    float: left;
+}
+
+.spec-type::after{
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.spec-choose{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30rpx;
+}
+
+.spec-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 1290rpx;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 10005;
+}
