--- a/Teacher3/pages/index/index.wxml
+++ b/Teacher3/pages/index/index.wxml
@@ -66,17 +66,17 @@
                 </view>
             </view>
         </view>
-        <image class='bg-md-img' src='http://img.my-shop.cc/teacher/tc3_bg_img.jpg?1'></image>
+        <image class='bg-md-img' src='{{user_data.img}}'></image>
         <view class='choice-box'>
             <view class='choice-head'>
                 <image class='box-img' src='http://img.my-shop.cc/teacher/tc3_box_img.png?1'></image>
                 <view class='choice-title m'>一种选择，一种别样的人生</view>
             </view>
             <view class='choice-content'>
-                <view class='choice-item' bindtap='jump' data-index='{{index}}' wx:for="{{user_data.product}}">
+                <view class='choice-item' bindtap='{{item.type===0?"":"jump"}}' data-index='{{index}}' wx:for="{{user_data.product}}">
                     <image class='choice-img' src='{{item.img}}'></image>
                     <view class='choice-des'>
-                        <image class='choice-icon' src='http://img.my-shop.cc/teacher/tc3_yl_icon1.png'></image>
+                        <!-- <image class='choice-icon' src='http://img.my-shop.cc/teacher/tc3_yl_icon1.png'></image> -->
                         <view class='choice-txt m red'>{{item.title}}</view>
                     </view>
                 </view>
@@ -93,10 +93,10 @@
             <view class='des-box'>
                 <view class='des-txt m' wx:for="{{user_data.join}}">{{item}}</view>
             </view>
-            <view class='img-content-title'>
+            <view class='img-content-title' wx:if="{{user_data.recruit?true:false}}">
                 <view class='title-txt-b red b ls'>招聘</view>
             </view>
-            <view class='des-box zhaop'>
+            <view class='des-box zhaop' wx:if="{{user_data.recruit?true:false}}">
                 <view class='des-item' wx:for="{{user_data.recruit}}">
                     <view class='des-title ls b'>{{item.title}}</view>
                     <view class='des-txt m'>{{item.content}}</view>
